gcc/testsuite/gcc.target/riscv/rvv/base/pragma-3.c
/* { dg-do compile } */
/* { dg-skip-if "test rvv intrinsic" { ! riscv_v } } */

#pragma riscv intrinsic "report-error" /* { dg-error {unknown '#pragma riscv intrinsic' option 'report-error'} } */
